# ss-pybind11

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .renovaterc.json  CMakeLists.txt  LICENSE  README.md  copier.yml  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  vcpkg.json
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree
.github/: codeql-config.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  pages.yml  renovate.yml  reuseable_cibuildwheel.yml  semantic-release.yml  wheels.yml
_modules/: index.html
_sources/: index.md.txt
_sources/api/: index.md.txt
api/: index.html
cmake/vcpkg/: vcpkg.toolchain.cmake
cmake/vcpkg/bootstrap/: vcpkg_bootstrap.cmake
cmake/vcpkg/ports/python3/: vcpkg.json
docs/: conf.py
docs/api/: index.md
includes/: copier-answers-sample.yml  variable.jinja
src/_core/: CMakeLists.txt
src/_core/src/: pybind.cpp
src/ss_pybind11/: __init__.py  _core.pyi
template/: .copier-answers.ss-cmake.yml  .gitignore.jinja  .pre-commit-config.yaml.jinja  .renovaterc.json.jinja  CMakeLists.txt.jinja  README.md.jinja  [% if docs_type == 'mkdocs' %]mkdocs.yml[% endif %].jinja  noxfile.py.jinja  pyproject.toml.jinja  vcpkg.json.jinja
template/[% if create_devcontainer == true %].devcontainer[% endif %]/: devcontainer.json.jinja
template/[% if docs_type == 'sphinx' %]docs[% endif %]/: conf.py.jinja  index.md.jinja
template/[% if docs_type == 'sphinx' %]docs[% endif %]/api/: index.md.jinja
template/[% if repo_platform == 'github' %].github[% endif %]/workflows/: [% if use_codeql == true %]codeql.yml[% endif %].jinja  cd.yml.jinja  ci.yml.jinja  pages.yml  pages.yml.jinja  renovate.yml  renovate.yml.jinja  reuseable_cibuildwheel.yml  reuseable_cibuildwheel.yml.jinja  semantic-release.yml.jinja  wheels.yml.jinja
template/cmake/: [% if ss_cmake_configure_warnings_and_hardening == true %]ConfigureWarningsAndHardening.cmake[% endif %]
template/cmake/vcpkg/ports/python3/: portfile.cmake
template/cmake/vcpkg/scripts/toolchains/: linux.cmake
template/src/[% if compiled == true %]_core[% endif %]/: CMakeLists.txt
template/src/{{ module_name }}/: [% if compiled == true %]_core.pyi[% endif %]  __init__.py.jinja
template/tests/: [% if compiled == true %]test_compiled.py[% endif %].jinja  test_package.py.jinja
tests/: test_compiled.py  test_package.py
